modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-service-types.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedservicetypes
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "The allowed service types"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Controls the allowed types for the Service. 
spec:
  crd:
    spec:
      names:
        kind: D8AllowedServiceTypes
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Controls the allowed types for the Service. 
          properties:
            allowedServiceTypes:
              type: array
              description: "List of types of Services allowed to be created."
              items:
                type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.set" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.set.set_contains

              violation contains {"msg": msg, "details": {}} if {
                not input.review.operation == "DELETE"
                obj := input.review.object
                service_name := obj.metadata.name
                service_spec := object.get(obj, "spec", {})
                service_type := object.get(service_spec, "type", "ClusterIP")
                allowed_types := input.parameters.allowedServiceTypes
                not set_contains(allowed_types, service_type)
                msg := sprintf("Field Service %v type has value %v which is not allowed (%v)", [service_name, service_type, allowed_types])
              }
