modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-service-types/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-volume-types
tests:
- name: security-policy
  template: ../../templates/security/allowed-service-types.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 001-example-allowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy/001-allowed.yaml
    assertions:
    - violations: no
  - name: 002-disallowed_loadbalancer
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy/002-disallowed_loadbalancer.yaml
    assertions:
    - violations: yes
  - name: 003-disallowed_nodeport
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy/003-disallowed_nodeport.yaml
    assertions:
    - violations: yes
